--- a/_posts/2019-12-30-the-us-narrative-today.html
+++ b/_posts/2019-12-30-the-us-narrative-today.html
@@ -1635,107 +1635,107 @@ stories:
   domain: http://www.overtoncountynews.com/
   link: https://www.overtoncountynews.com/lifestyles/entertainment/madonna-s-relationship-with-ahlamalik-williams-is-heating-up/article_238be755-05ab-5ed2-8552-6f0a878d15c7.html
 images:
-- name: sand-hand-sand-hand-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-crafty-painting.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-dark-rain.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dark-rain.JPG
-- name: aws-s3-lighthouse-lighthouse-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still-600.jpg
-- name: abandonedbuildings_light_dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_light_dali.jpg
-- name: rain-princess-IMG_7319.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7319.jpg
-- name: nazi-invasion-downtown-sidewalk-washington.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-sidewalk-washington.jpg
-- name: mosaic-face-mosaic-face-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-granite.jpg
-- name: school-clouds-church-clouds-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crabapple.jpg
-- name: old-house-oldhouse-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-plentiful.jpg
-- name: wind-mills-windmills-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-graham-sutherland.jpg
-- name: old-cabin-oldcabin-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-crabapple.jpg
-- name: copper-circuit-dark-hallway-in-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dark-hallway-in-hotel.jpg
-- name: copper-circuit-statue-staring-down-to-right.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-statue-staring-down-to-right.jpg
-- name: old-granary-field-granaryfield-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-gred-mash.jpg
-- name: la-muse-electric-tower-sun-behind.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-electric-tower-sun-behind.jpg
-- name: ellis-island-ellisisland-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-granite.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-colorful-dream.jpg
-- name: curtain-curtain-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-aqua.jpg
-- name: stories-capital-battle-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-capital-battle-internet-numbers.jpg
-- name: old-church-oldchurch-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-missle.jpg
-- name: aws-s3-stories-new-20-132-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-20-132-800-500-0-max-0-1--1.jpg
-- name: file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-00-00.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
-- name: copper-circuit-grafitti-woman-bangs.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-grafitti-woman-bangs.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-smooth-ride.JPG
-- name: old-door-lock-old-door-lock-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-propaganda-leaflets.jpg
-- name: store-on-corner-store-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-kandinsky-bv.jpg
-- name: subway-subway-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-really-hot.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-dali-two.jpg
-- name: stalin-time-satellite-with-sunset.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-satellite-with-sunset.jpg
-- name: yosemite-yosemite-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-electricity.jpg
-- name: paris-paris-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-wols.jpg
-- name: razorcliff-razorcliff-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-pablo-blue.jpg
-- name: oldtrain-oldtrain-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-purp-paper.jpg
-- name: oldhousecars-house-old-cars-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dark-dali.jpg
-- name: bordercrossing-bordercrossing-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-marcel-duchamp.jpg
-- name: blossombar-blue-brush-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-blue-brush-file-00-00-24-99.jpg
-- name: nazi-invasion-blechlety-old-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-blechlety-old-racks.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-clean-view.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-clean-view.png
-- name: crypto-machine-bletchley-crypto-machine-bletchley-really-hot.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-really-hot.png
-- name: birdhouse-birdhouse-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-electricity.jpg
-- name: dragon-desert-desert-dragon-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-rain.jpg
-- name: copper-circuit-london-underground-covent-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-london-underground-covent-garden.jpg
-- name: mistywoods-babyfoot-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-rainbow-festival.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colorful-dream.jpg
-- name: locked-up-steam-lock-up-steam-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-colorful-dream.jpg
-- name: old-school-house-old-schoolhouse-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-circuit-4.jpg
-- name: art-museum-art-museum-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-satan-red.jpg
-- name: server-cloud-server-racks-door-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-graham-sutherland.jpg
-- name: copper-circuit-nyc-streets-laundromat.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-nyc-streets-laundromat.jpg
-- name: rockingchair-rockingchair-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-marcel-duchamp.jpg
+- name: oldroad-old-road-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-rain.jpg
+- name: ellis-island-ellisisland-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-crabapple.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-purp-paper.jpg
+- name: hollywood-building-hollywood-building-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-gan-vogh.jpg
+- name: stalin-time-old-ship-waterfront-harbor.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-ship-waterfront-harbor.jpg
+- name: eduardo-eduardo-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-spagetti-accident.jpg
+- name: wall-cannon-wall-cannon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon.jpg
+- name: yuma-bank-yuma-bak-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-4.jpg
+- name: store-on-corner-store-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dry-skin.jpg
+- name: nazi-invasion-IMG_7559.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7559.jpg
+- name: cargo-ship-cargo-ship-on-sea-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-atari-asteroids.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-blue-brush.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-brush.JPG
+- name: capital-battle-capitolbattle-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-space-pizza.jpg
+- name: capital-battle-capitolbattle-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-bright-sand.jpg
+- name: file-00-00-59-36.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-59-36.jpg
+- name: old-granary-field-oldhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-light-dali.jpg
+- name: statue-of-liberty-front-view-statueofliberty-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-mucha-mult.jpg
+- name: meadowbutterfly-meadow-butterfly-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purple-storm.jpg
+- name: aws-s3-stories-fence-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-ww2-dresden.jpg
+- name: downtown-los-angeles-downtown-la-blue-circuit-4.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit-4.JPG
+- name: oldroad-old-road-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-brush.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-gred-mash.jpg
+- name: oldsmallboat-oldsmallboat-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-far-away.jpg
+- name: christianity-christianity-under-construction.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction.jpg
+- name: bluelake-plentiful-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-plentiful-file-00-00-00-00.jpg
+- name: berlinwall-DSC-0084-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purple-storm.jpg
+- name: containership-bw-storytelling-colored-circuits.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling-colored-circuits.png
+- name: downtown-fredericksburg-downtown-fredericksburg-deep-connections.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-deep-connections.JPG
+- name: yosemite-yosemite-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-green-zuma.jpg
+- name: cargo-ship-cargo-ship-on-sea-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-mucha-mult.jpg
+- name: gears-4882162452-fa3126b38d-b-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-ww2-dresden.jpg
+- name: ellis-island-ellis-island-room-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-ww2-color.jpg
+- name: downtheline-downtheline-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-light-dali.jpg
+- name: server-cloud-server-racks-door-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-rainbow-festival.jpg
+- name: amusement-park-amusement-park-2-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dry-skin.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-dark-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dark-dali.JPG
+- name: old-granary-field-oldhouse-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-gan-vogh.jpg
+- name: downtown-trucksilo-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-smooth-ride.jpg
+- name: crow-crow-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-emily-carr.jpg
+- name: san-francisco-street-view-san-francisco-street-view-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-constitution.jpg
+- name: crow-crow-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colored-circuits.jpg
+- name: crow_smooth_ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_smooth_ride.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colorful-dream.jpg
+- name: abe-lincoln-one-umberto-bocc-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-umberto-bocc-file-00-00-00-00.jpg
+- name: oldhotel-oldhotel-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-ww2-dresden.jpg
+- name: flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
+- name: white-house-whitehouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-purple-pond.jpg
+- name: downtheline-downtheline-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-monet-one.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-spagetti-accident.jpg
+- name: copper-circuit-fishing-ship-in-docks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-fishing-ship-in-docks.jpg
+- name: art-museum-art-museum-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-horiz-circuit.jpg
 ---
 Google Search Trends Show How Travel Has Changed In The Last Decade.&nbsp;Innovative Fashion Designers Lead The Way On Sustainability.&nbsp;John Lewis Diagnosed With Pancreatic Cancer.&nbsp;Sister Ruth Crop Walk.&nbsp;Fun Holiday Events At Sugarbush Resort.&nbsp;Another Round Of Snow Expected For Big Bear.&nbsp;Rangers Visit The Oilers Following Overtime Victory.&nbsp;Instagram Feed Leads Young Dance Student To Win Special Honor.&nbsp;
